# weight_tracking_api

./: .gitignore  README.md  config.py  pyproject.toml  wsgi.py
tracker_api/: __init__.py  models.py  routes.py  schemas.py  test.db
tracker_api/utilities/: custom_validators.py  db_services.py
